kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rundeck
  namespace: default
  labels:
    app: rundeck
spec:
  selector:
    app: rundeck
  ports:
    - name: rundeck-port
      protocol: TCP
      port: 80
      targetPort: 4440
  type: ClusterIP
